<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:ignore="ExtraText"><![CDATA[
    tools:context=".ui.home.HomeFragment">
    ]]>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/weekly"
            style="@android:style/Widget.Material.Light.Button.Toggle"
            android:layout_width="181dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:fadingEdge="none"
            android:fontFamily="sans-serif-light"
            android:foregroundTint="#00FFFFFF"
            android:insetRight="9dp"
            android:lineSpacingExtra="12sp"
            android:onClick="weeklyAction"
            android:shadowColor="#00FFFFFF"
            android:text="SCHEDULE"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="visible"
            app:icon="@drawable/sched"
            app:iconSize="40dp"
            app:iconTint="@color/purple_500"
            app:iconTintMode="src_atop" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="49dp"
            android:layout_height="34dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/export"
            style="@android:style/Widget.Material.Light.Button.Toggle"
            android:layout_width="179dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:background="@null"
            android:backgroundTint="@color/white"
            android:fadingEdge="none"
            android:fontFamily="sans-serif-light"
            android:foregroundTint="#00FFFFFF"
            android:insetRight="9dp"
            android:lineSpacingExtra="12sp"
            android:shadowColor="#00FFFFFF"
            android:text="Export"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible"
            app:icon="@drawable/export1"
            app:iconSize="40dp"
            app:iconTint="@color/purple_500"
            app:iconTintMode="src_atop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:backgroundTintMode="src_in"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monthYearTV"
            android:layout_width="138dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:text="@string/month_year"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/next"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/sun"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/mon"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/tue"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/wed"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/thu"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:fadingEdge="horizontal"
            android:text="@string/fri"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="23dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ECEAEA"
            android:text="@string/sat"
            android:textAlignment="textStart" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient3"
        android:fadingEdge="vertical" />

</LinearLayout>
